[metadata]
name = shfmt_py
version = 3.12.0-1
description = Shell source code formatter
url = https://github.com/scop/pre-commit-shfmt
# license here is for shfmt proper; Python packaging related files may have others, see their contents and classifiers below
license = BSD 3-Clause
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Go
project_urls =
    Upstream = https://github.com/mvdan/sh#shfmt

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_darwin_amd64
    sha256 = c31548693de6584e6164b7ed5fbb7b4a083f2d937ca94b4e0ddf59aa461a85e4
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_darwin_arm64
    sha256 = d903802e0ce3ecbc82b98512f55ba370b0d37a93f3f78de394f5b657052b33dd
    [shfmt]
    group = shfmt-binary
    # TODO: verify i386
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_linux_386
    sha256 = 6b67da16834a215cc8c565bfbcfaa0303809456d8cafad28cb2eeea35a88904d
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_linux_amd64
    sha256 = d9fbb2a9c33d13f47e7618cf362a914d029d02a6df124064fff04fd688a745ea
    [shfmt]
    group = shfmt-binary
    # TODO: verify armv6hf
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_linux_arm
    sha256 = a93c1ed5be25ce9dd0fd62c4cf0af7453740d234725877b973e6c6a8c7598500
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_linux_arm64
    sha256 = 5f3fe3fa6a9f766e6a182ba79a94bef8afedafc57db0b1ad32b0f67fae971ba4
    [shfmt.exe]
    group = shfmt-binary
    # TODO: verify both
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_windows_386.exe
    sha256 = 92c1ef0af344a10f2cefe3ce4bc6793ae8b3719ac08fc01802bbd8eae105e534
    [shfmt.exe]
    group = shfmt-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_windows_amd64.exe
    sha256 = c8bda517ba1c640ce4a715c0fa665439ddbe4357ba5e9b77b0e51e70e2b9c94b
