[metadata]
name = shfmt_py
version = 3.13.0-1
description = Shell source code formatter
url = https://github.com/scop/pre-commit-shfmt
# shfmt proper and Python packaging related files
license = BSD 3-Clause AND Apache Software License AND MIT License
classifiers =
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Go
project_urls =
    Upstream = https://github.com/mvdan/sh#shfmt

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_darwin_amd64
    sha256 = b6890a0009abf71d36d7c536ad56e3132c547ceb77cd5d5ee62b3469ab4e9417
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_darwin_arm64
    sha256 = 650970603b5946dc6041836ddcfa7a19d99b5da885e4687f64575508e99cf718
    [shfmt]
    group = shfmt-binary
    # TODO: verify i386
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_linux_386
    sha256 = e645b59e34928442853fb5610dc485985f8acbe112a129679cede1dc320e54ff
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_linux_amd64
    sha256 = 70aa99784703a8d6569bbf0b1e43e1a91906a4166bf1a79de42050a6d0de7551
    [shfmt]
    group = shfmt-binary
    # TODO: verify armv6hf
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_linux_arm
    sha256 = 774b9a86cff4844179328cfbab2f602e75dcb68132e918e5271d015b3295c9c7
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_linux_arm64
    sha256 = 2091a31afd47742051a77bf7cfd175533ab07e924c20ef3151cd108fa1cab5b0
    [shfmt.exe]
    group = shfmt-binary
    # TODO: verify both
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_windows_386.exe
    sha256 = f3e32b2a320a3053837add32803d7fb3b730d3f10b84a867d327a549ef068fa0
    [shfmt.exe]
    group = shfmt-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.0/shfmt_v3.13.0_windows_amd64.exe
    sha256 = 62241aaf6b0ca236f8625d8892784b73fa67ad40bc677a1ad1a64ae395f6a7d5
