[metadata]
name = shfmt_py
version = 3.13.1-1
description = Shell source code formatter
url = https://github.com/scop/pre-commit-shfmt
# shfmt proper and Python packaging related files
license = BSD 3-Clause AND Apache Software License AND MIT License
classifiers =
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Go
project_urls =
    Upstream = https://github.com/mvdan/sh#shfmt

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_darwin_amd64
    sha256 = 6feedafc72915794163114f512348e2437d080d0047ef8b8fa2ec63b575f12af
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_darwin_arm64
    sha256 = 9680526be4a66ea1ffe988ed08af58e1400fe1e4f4aef5bd88b20bb9b3da33f8
    [shfmt]
    group = shfmt-binary
    # TODO: verify i386
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_linux_386
    sha256 = 5f9a2c46249dab66d7767df676083ea6a3313831ca9f4bc29e4c21af87bd4f5e
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_linux_amd64
    sha256 = fb096c5d1ac6beabbdbaa2874d025badb03ee07929f0c9ff67563ce8c75398b1
    [shfmt]
    group = shfmt-binary
    # TODO: verify armv6hf
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_linux_arm
    sha256 = f6c23b95971bcc5ebf86411bccefb79f1e99f8efe7c722d980a3f244838b1398
    [shfmt]
    group = shfmt-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_linux_arm64
    sha256 = 32d92acaa5cd8abb29fc49dac123dc412442d5713967819d8af2c29f1b3857c7
    [shfmt.exe]
    group = shfmt-binary
    # TODO: verify both
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_windows_386.exe
    sha256 = 9b4f368b837feb883a3b2bf38a46a94dcab4bca4b7c3e19f6710e0e09a56ce7c
    [shfmt.exe]
    group = shfmt-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/mvdan/sh/releases/download/v3.13.1/shfmt_v3.13.1_windows_amd64.exe
    sha256 = 60cd368533d0ad73fa86d93d5bbf95ef40587245ce684ed138c1b31557b5fe97
